@@ -1,3 +1,8 @@
+Thu Jun 25 09:54:55 1998  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/arm.h (REG_ALLOC_ORDER): Add ARG_POINTER_REGNUM,
+	noticed by grahams@rcp.co.uk.
+
 Thu Jun 25 11:12:29 1998  Dave Brolley  <brolley@cygnus.com>
 
 	* gcc.c (default_compilers): Use new | syntax to eliminate
